# emission

./: Cargo.toml  README.org
examples/: main.rs
src/: compute.rs  lib.rs  render.rs
src/shaders/: render.frag  render.vert  simulate.comp
