[package]
name = "emission"
version = "0.1.0"
authors = ["Al McElrath <hello@yrns.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rendy = { path = "../rendy/rendy", features = ["texture-image", "spirv-reflection", "vulkan", "vulkan-x11"] }
once_cell = "1.4.0"
failure = "0.1"
log = "0.4"
nalgebra = "0.21.1"

[dev-dependencies]
env_logger = "0.7.1"
